# heroes-of-the-sun

./: .gitignore  Anchor.toml  Cargo.toml  Makefile  package-lock.json  package.json
app/: .gitignore  mono_crash.0.0.json  mono_crash.10772abd29.0.json
app/Assets/: DefaultVolumeProfile.asset  DialogueCam.renderTexture  DisplayQuest.cs  DisplayQuests.cs  PopupManager.cs  ResearchPopup.cs  RotateContiniously.cs  StaticFtueButton.cs  UniversalRenderPipelineGlobalSettings.asset
app/Assets/Animations/: CharacterController.controller  HammerBuild.anim  WorkerController.controller  hammer_build.anim  labour_controller.controller
app/Assets/Materials/: Grass.mat  Water.mat  WaterShader.shadergraph
app/Assets/Materials/PlacementGrid/: GridAvailable.shadergraph  GridElement.shadergraph  GridLocked.shadergraph
app/Assets/Materials/UI/: InverseMaskMaterial.mat  MaskedMaterial.mat
app/Assets/Prefabs/: GridElement.prefab
app/Assets/Prefabs/Buildings/: NonInteractivePlacedBuilding.prefab  PlacedBuilding.prefab  PlacementPreview.prefab
app/Assets/Prefabs/Characters/: Hero.prefab  LabourUnit.prefab  WorkerUnit.prefab
app/Assets/Prefabs/UI/: Answer.prefab  BuildingInfo.prefab  BuildingProgress.prefab  BuildingSelector.prefab  BuildingSnapshot.prefab  FTUE_Canvas.prefab  HUD_BuildMenu.prefab  HUD_Faith.prefab  HUD_Logout.prefab  HUD_Minimap.prefab  HUD_Treasury.prefab  HUD_TurnControl.prefab  LabourAllocation.prefab  PlacementControl.prefab  Quest.prefab  ResearchItem.prefab  WorkerAssignmentEntry.prefab
app/Assets/Prefabs/World/: Chunk.prefab  GenericChunk.prefab  Loot.prefab  RandomChunk.prefab  SettlementChunk.prefab  Tile.prefab  Totem.prefab  Tree.prefab
app/Assets/Resources/: PerformanceTestRunInfo.json
app/Assets/Scenes/: Loading.unity  Settlement.unity  World.unity
app/Assets/Scenes/Settlement/: Main Camera Profile.asset
app/Assets/Scripts/: Root.cs
app/Assets/Scripts/Bolt/: DeityBot.cs  Hero.cs  LocationAllocator.cs  LootDistribution.cs  Player.cs  Settlement.cs  SmartObjectDeity.cs  SmartObjectLocation.cs  TokenMinter.cs
app/Assets/Scripts/Connectors/: BaseComponentConnector.cs  BaseProgramConnector.cs  HeroConnector.cs  LocationAllocatorConnector.cs  LootDistributionConnector.cs  OtherPlayersSettlementConnector.cs  Pda.cs  PlayerConnector.cs  PlayerSettlementConnector.cs  SettlementConnector.cs  SmartObjectDeityConnector.cs  SmartObjectLocationConnector.cs  (+1 more)
app/Assets/Settings/: URP-Balanced-Renderer.asset  URP-Balanced.asset  URP-HighFidelity-Renderer.asset  URP-HighFidelity.asset  URP-Performant-Renderer.asset  URP-Performant.asset
app/ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  ProjectSettings.asset  QualitySettings.asset
app/bin-web:v12/: index.html
app/bin-web:v13/: index.html
app/bin-web:v16/: index.html
app/bin-web:v17/: index.html
app/bin-web:v18/: index.html
app/bin-web:v19/: index.html
app/bin-web:v22/: index.html
app/bin-web:v23/: index.html
app/bin-web:v24/: index.html
app/bin-web:v25/: index.html
app/bin-web:v26/: index.html
app/bin-web:v27/: index.html
app/bin-web:v28/: manifest.webmanifest
app/bin-web:v29/: ServiceWorker.js  index.html
app/bin-web:v30/: index.html
app/bin-web:v31/: index.html
app/web-bin-v12.app/Contents/: Info.plist
app/web-bin:v1/: index.html
app/web-bin:v10/: index.html
app/web-bin:v11/: index.html
app/web-bin:v2/: index.html
app/web-bin:v3/: index.html
app/web-bin:v4/: index.html
app/web-bin:v6/: index.html
app/web-bin:v8/: index.html
app/web-bin:v9/: index.html
crates/types/: Cargo.toml
programs-ecs/components/hero/: Cargo.toml
programs-ecs/components/location_allocator/: Cargo.toml
programs-ecs/components/loot-distribution/: Cargo.toml
programs-ecs/components/player/: Cargo.toml
programs-ecs/components/settlement/: Cargo.toml
programs-ecs/components/smart-object-deity/: Cargo.toml
programs-ecs/components/smart-object-location/: Cargo.toml
programs-ecs/systems/assign-hero/: Cargo.toml
programs-ecs/systems/assign-settlement/: Cargo.toml
programs-ecs/systems/assign-settlement/src/: lib.rs
programs-ecs/systems/assign-worker/: Cargo.toml
programs-ecs/systems/bump_location_allocator/: Cargo.toml
programs-ecs/systems/bump_location_allocator/src/: lib.rs
programs-ecs/systems/change-backpack/: Cargo.toml
programs-ecs/systems/claim-loot/: Cargo.toml
programs-ecs/systems/claim-loot/src/: errors.rs  lib.rs
programs-ecs/systems/claim-quest/: Cargo.toml
programs-ecs/systems/claim-time/: Cargo.toml
programs-ecs/systems/claim-time/src/: lib.rs
programs-ecs/systems/exchange/: Cargo.toml
programs-ecs/systems/exchange/src/: errors.rs  lib.rs
programs-ecs/systems/labour/: Cargo.toml
programs-ecs/systems/move-hero/: Cargo.toml
programs-ecs/systems/repair/: Cargo.toml
programs-ecs/systems/research/: Cargo.toml
programs-ecs/systems/reset/: Cargo.toml
programs-ecs/systems/sacrifice/: Cargo.toml
programs-ecs/systems/smart-object-deity-interact/: Cargo.toml
programs-ecs/systems/smart-object-deity-interact/src/: errors.rs  lib.rs
programs-ecs/systems/smart-object-init/: Cargo.toml
programs-ecs/systems/smart-object-init/src/: lib.rs
programs-ecs/systems/time/: Cargo.toml
programs-ecs/systems/upgrade/: Cargo.toml
programs-ecs/systems/wait/: Cargo.toml
programs-ecs/systems/wait/src/: lib.rs
programs/deity-bot/: Cargo.toml
programs/deity-bot/src/: lib.rs
programs/deity-bot/src/instructions/: callback_agent.rs  initialize_agent.rs  interact_agent.rs  mod.rs
programs/deity-bot/src/instructions/accounts/: agent.rs
programs/token-minter/: Cargo.toml
programs/token-minter/src/: lib.rs
tests/: build.test.ts  chatbot.test.ts  exploration.test.ts  heroes-of-the-sun.ts  player.test.ts  repair.test.ts  resource.test.ts  settlement.wrapper.ts  smartobjects.test.ts  tokenisation.test.ts
tests/wrappers/: chatbot.wrapper.ts  hero.wrapper.ts  location_allocator.wrapper.ts  loot_distribution.wrapper.ts  player.wrapper.ts  settlement.wrapper.ts  smart_object.wrapper.ts  token.wrapper.ts  world.wrapper.ts
(+276 files in other folders)
