[package]
name = "deity-bot"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "deity_bot"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
serde_json = "1.0.134"
solana-gpt-oracle = { version = "0.1.0", features = ["cpi"] }
anchor-spl = { version = "0.30.1", features = ["metadata"] }
token-minter = { version = "0.1.0", path = "../token-minter", features = ["cpi"] }
