[package]
name = "assign-settlement"
version = "0.1.8"
description = "Created with Bolt"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "assign_settlement"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
bolt-lang = "0.2.2"
anchor-lang = "0.30.1"
serde = { version = "1.0", features = ["derive"] }
player = { version = "0.1.8", path = "../../components/player", features = ["cpi"] }
settlement = { version = "0.1.8", path = "../../components/settlement", features = ["cpi"] }
location_allocator = { version = "0.1.8", path = "../../components/location_allocator", features = ["cpi"] }
