[package]
name = "bump_location_allocator"
version = "0.1.8"
description = "Created with Bolt"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bump_location_allocator"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
bolt-lang = "0.1.8"
anchor-lang = "0.30.1"
serde = { version = "1.0", features = ["derive"] }
location_allocator = { version = "0.1.8", path = "../../components/location_allocator", features = ["cpi"] }
