[package]
name = "exchange"
version = "0.1.8"
description = "Created with Bolt"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "exchange"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
bolt-lang = "0.2.0"
anchor-lang = "0.30.1"
serde = { version = "1.0", features = ["derive"] }
anchor-spl = { version = "0.30.1", features = ["metadata"] }
token-minter = { version = "0.1.0", path = "../../../programs/token-minter", features = ["cpi"] }
settlement = { version = "0.1.10", path = "../../components/settlement", features = ["cpi"] }
