[package]
name = "smart-object-deity-interact"
version = "0.1.8"
description = "Created with Bolt"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "smart_object_deity_interact"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build",  "anchor-spl/idl-build"]

[dependencies]
bolt-lang = "0.2.2"
anchor-lang = "0.30.1"
serde = { version = "1.0", features = ["derive"] }

deity-bot = { version = "0.1.0", path = "../../../programs/deity-bot", features = ["cpi"] }
smart-object-deity = { version = "0.1.8", path = "../../components/smart-object-deity", features = ["cpi"] }
anchor-spl = { version = "0.30.1", features = ["metadata"] }
