[package]
name = "smart-object-init"
version = "0.1.8"
description = "Created with Bolt"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "smart_object_init"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
bolt-lang = "0.2.0"
anchor-lang = "0.30.1"
serde = { version = "1.0", features = ["derive"] }
smart-object-location = { version = "0.1.8", path = "../../components/smart-object-location", features = ["cpi"] }
