[package]
name = "wait"
version = "0.1.10"
description = "Created with Bolt"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "wait"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
bolt-lang = "0.2.1"
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["metadata"] }
serde = { version = "1.0", features = ["derive"] }
settlement = { version = "0.1.10", path = "../../components/settlement", features = ["cpi"] }
